--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
  <body>
    <header class="page-header wrapper">
-    <h1><a href="index.html"><img class="logo" src="images/カフェロゴ-02.png" alt="OFHカフェ ホーム"></a></h1>
+    <h1><a href="index.html"><img class="logo" src="カフェロゴ-02.png" alt="OFHカフェ ホーム"></a></h1>
     
     
     <p class="info"><a href="https://goo.gl/maps/2zmUvyvCwqkzUWrf6">〒747-1234 山口県防府市1234-5-6</a>
@@ -36,7 +36,7 @@
    </header>
 
     <div class="top-mv wrapper">
-     <div class="main-img"><img src="images/22664167_m角丸.png" alt="店内の様子"></div>
+     <div class="main-img"><img src="22664167_m角丸.png" alt="店内の様子"></div>
      <div class="box1"><p>どこか懐かしい<br>落ち着いた空間で<br>至福のひと時を</p></div>
     </div><!-- /.top-mv -->
   
