--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
  <body>
    <header class="page-header wrapper">
-    <h1><a href="index.html"><img class="logo" src="https://github.com/eDesign123/ofhcafe/blob/main/%E3%82%AB%E3%83%95%E3%82%A7%E3%83%AD%E3%82%B3%E3%82%99-02.png?raw=true" alt="OFHカフェ ホーム"></a></h1>
+    <h1><a href="index.html"><img class="logo" src="rogo.png" alt="OFHカフェ ホーム"></a></h1>
     
     
     <p class="info"><a href="https://goo.gl/maps/2zmUvyvCwqkzUWrf6">〒747-1234 山口県防府市1234-5-6</a>
@@ -36,7 +36,7 @@
    </header>
 
     <div class="top-mv wrapper">
-     <div class="main-img"><img src="https://github.com/eDesign123/ofhcafe/blob/main/22664167_m%E8%A7%92%E4%B8%B8.png?raw=true" alt="店内の様子"></div>
+     <div class="main-img"><img src="mv.png" alt="店内の様子"></div>
      <div class="box1"><p>どこか懐かしい<br>落ち着いた空間で<br>至福のひと時を</p></div>
     </div><!-- /.top-mv -->
   
