--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
  <body>
    <header class="page-header wrapper">
-    <h1><a href="index.html"><img class="logo" src="rogo.png" alt="OFHカフェ ホーム"></a></h1>
+    <h1><a href="index.html"><img class="logo" src="https://github.com/eDesign123/ofhcafe/blob/main/rogo.png?raw=true" alt="OFHカフェ ホーム"></a></h1>
     
     
     <p class="info"><a href="https://goo.gl/maps/2zmUvyvCwqkzUWrf6">〒747-1234 山口県防府市1234-5-6</a>
