--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    </header>
 
     <div class="top-mv wrapper">
-     <div class="main-img"><img src="mv.png" alt="店内の様子"></div>
+     <div class="main-img"><img src="https://github.com/eDesign123/ofhcafe/blob/main/mv.png?raw=true" alt="店内の様子"></div>
      <div class="box1"><p>どこか懐かしい<br>落ち着いた空間で<br>至福のひと時を</p></div>
     </div><!-- /.top-mv -->
   
