--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>portfolio</title>
-    <link rel="stylesheet"href="reset.css">
-    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
