--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>portfolio</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet"　href="https://github.com/eDesign123/ofhcafe/blob/main/style.css">
+    <link　　href="https://github.com/eDesign123/ofhcafe/blob/main/style.css"　rel="stylesheet">
 </head>
 <body>
     <div class="header">
