--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>portfolio</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="<link rel=“stylesheet” href=“https://eDesign123.github.io/ofhcafe/style.css”/>">
 </head>
 <body>
     <div class="header">
